--- a/static/styles/_variables.scss
+++ b/static/styles/_variables.scss
@@ -1,3 +1,55 @@
+// Colors
+
 $evidence-pink: #e580ff;
 $evidence-purple: #b780ff;
 $evidence-blue: #80adff;
+
+
+// Enable bootstrap rounded mode
+$enable-rounded: true;
+
+
+// Spacing
+//
+// Control the default styling of most Bootstrap elements by modifying these
+// variables. Mostly focused on spacing.
+// You can add more entries to the $spacers map, should you need more variation.
+
+$spacer: 1rem !default;
+
+
+// Components
+//
+// Define common padding and border radius sizes and more.
+
+$border-width:                1px !default;
+$border-radius:               .25rem !default;
+
+
+// Grid columns
+//
+// Set the number of columns and specify the width of the gutters.
+
+$grid-gutter-width:           1.5rem !default;
+
+
+// Cards
+
+$card-spacer-y:                     $spacer !default;
+$card-spacer-x:                     $spacer !default;
+$card-title-spacer-y:               $spacer / 2 !default;
+$card-border-width:                 $border-width !default;
+$card-border-radius:                $border-radius !default;
+$card-border-color:                 rgba(black, .125) !default;
+$card-inner-border-radius:          substract($card-border-radius, $card-border-width) !default;
+$card-cap-padding-y:                $card-spacer-y / 2 !default;
+$card-cap-padding-x:                $card-spacer-x !default;
+$card-cap-bg:                       rgba(black, .03) !default;
+$card-cap-color:                    null !default;
+$card-height:                       null !default;
+$card-color:                        null !default;
+$card-bg:                           white !default;
+
+$card-img-overlay-padding:          $spacer !default;
+
+$card-group-margin:                 $grid-gutter-width / 2 !default;
