:sparkles: Introducing Privacy page

--- a/static/styles/_all.scss
+++ b/static/styles/_all.scss
@@ -17,6 +17,10 @@ body {
     }
   }
 
+  .italic {
+    font-style: italic;
+  }
+
   header {
     background-color: #FDFAFF;
     display: block;
