--- a/static/styles/_variables.scss
+++ b/static/styles/_variables.scss
@@ -1,8 +1,8 @@
 // Colors
 
-$evidence-pink: #e580ff;
-$evidence-purple: #b780ff;
-$evidence-blue: #80adff;
+$brand-pink: #e580ff;
+$brand-purple: #b780ff;
+$brand-blue: #80adff;
 
 
 // Enable bootstrap rounded mode
