--- a/static/styles/_all.scss
+++ b/static/styles/_all.scss
@@ -334,7 +334,7 @@ body {
   }
 
   footer {
-    padding: 120px 0 45px;
+    padding: 20px 0;
 
     @media screen and (max-width: $break-small) {
       padding: 50px 0 45px;
@@ -420,7 +420,6 @@ body {
 
     .copyright {
       text-align: center;
-      margin-top: 90px;
 
       @media screen and (max-width: $break-small) {
         margin-top: 31px;
