💄 Center the main logo

--- a/static/styles/_all.scss
+++ b/static/styles/_all.scss
@@ -35,7 +35,7 @@ body {
 
     .top-menu {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
 
       .get-started {
         padding-top: 15px;
